Run aeron-core