@@ -48,6 +48,19 @@ tasks {
     }
 }
 
+application {
+    mainClass.set(project.findProperty("mainClass")?.toString() ?: "com.example.DefaultMain")
+
+    applicationDefaultJvmArgs = listOf(
+        "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+        "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+        "--add-opens", "java.base/sun.misc=ALL-UNNAMED"
+    )    
+
+}
+
+
 testing {
     suites {
         // Configure the built-in test suite
